--- a/app/src/main/res/layout/fourth_activity.xml
+++ b/app/src/main/res/layout/fourth_activity.xml
@@ -1,20 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
-    <Button
-        android:onClick="onClick"
-        android:text="세계 지도 보기"
-        android:drawableLeft="@drawable/televisionicon"
-        android:id="@+id/imageButton1"
-        android:layout_width="214dp"
-        android:layout_height="263dp" />
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:weightSum="1">
 
     <Button
-        android:onClick="onClick"
-        android:text="기상 예보 영상 보기"
+        android:drawableLeft="@drawable/worldmap"
+        android:id="@+id/imageButton1"
+        android:text="세계 날씨 보기"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="15dp"
+        android:textSize="30dp"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"/>
+    <Button
         android:drawableLeft="@drawable/televisionicon"
         android:id="@+id/imageButton2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:text="날씨 영상 보기"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="15dp"
+        android:textSize="30dp"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"/>
+
 </LinearLayout>
