--- a/app/src/main/res/layout/third_activity.xml
+++ b/app/src/main/res/layout/third_activity.xml
@@ -1,18 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<android.support.design.widget.CoordinatorLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:fitsSystemWindows="true"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
+    android:layout_height="match_parent" android:fitsSystemWindows="true"
     tools:context="push.example.a99101.goodweather.ThirdActivity">
 
-
     <include layout="@layout/content_daily_forecast" />
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="세번째"
-        android:textSize="100dp"/>
 
-</LinearLayout>
+</android.support.design.widget.CoordinatorLayout>
